--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+hex = "0.4"
+hex-literal = "0.3"
+serde = "1.0.152"
+serde_json = "1.0.93"
+tokio = { version = "0.2", features = ["full"] }
+web3 = "0.15"
+
+[lib]
