--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 [dependencies]
 hex = "0.4"
 hex-literal = "0.3"
+secp256k1 = { version = "0.20", features = ["recovery"] }
 serde = "1.0.152"
 serde_json = "1.0.93"
 tokio = { version = "0.2", features = ["full"] }
-web3 = "0.15"
+web3 = { version = "0.15", features = ["signing"] }
 
 [lib]
