--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15.0"
 hex = "0.4"
 hex-literal = "0.3"
 secp256k1 = { version = "0.20", features = ["recovery"] }
