--- a/Makefile.toml
+++ b/Makefile.toml
@@ -16,5 +16,5 @@ script = [
   "fi",
   "export $(grep -v '^#' .env | xargs)",
   "cd contracts",
-  "forge create --rpc-url $RPC_URL --private-key $PRIVATE_KEY --legacy contracts/FlagManager.test.sol:FlagManagerTest"
+  "forge create --rpc-url $RPC_URL --private-key $PRIVATE_KEY --legacy contracts/OfferManager.test.sol:OfferManagerTest"
 ]
