--- a/contracts/package.json
+++ b/contracts/package.json
@@ -29,5 +29,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
