--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,15 @@ ethers = { version = "1.0", features = ["abigen", "ethers-solc", "legacy", "rust
 hex = "0.4"
 hex-literal = "0.3"
 open-fastrlp = "0.1.4"
+plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "beefc91", optional = true }
+rand = { version = "0.8.5", optional = true }
 reqwest = "0.11"
 serde = "1.0"
 serde_json = "1.0"
 tokio = { version = "1.18", features = ["macros"] }
 
 [lib]
+
+[features]
+default = ["test_poseidon"]
+test_poseidon = ["dep:plonky2", "rand"]
